--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Calorie Counter</title>
     </head>
     <body>
-        
+        <main>
+            <h1>Calorie Counter</h1>
+        </main>
     </body>
 </html>
